# fastproto

./: .gitignore  README.md  example.cpp  example.fastproto  format.sh  pyproject.toml  pyruntime.hpp  test.cpp
.github/workflows/: publish.yml  test.yml
compiler/: README.md  ast.py  example.fastproto  generator.py  generator2.py  lex.py  parser.py  pyproject.toml
compiler/fastproto_compiler/: __init__.py  cli.py  lexer.py  model.py  parser.py
compiler/tests/: test_cli.py
fastproto_compiler/: __init__.py  cli.py  generator.py  python_generator.py  python_runtime.py  runtime.py
python_bindings/: CMakeLists.txt  README.md  pyproject.toml
python_bindings/examples/: use_bindings.py
python_bindings/fastproto_example_bindings/: __init__.py
python_bindings/src/: fastproto_example_bindings.cpp
tests/: test_cli.py  test_python_generator.py
