[project]
name = "fastproto-compiler"
dynamic = ["version"]
description = "Command line compiler for generating fastproto C++ headers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rply>=0.7.8",
]

[project.scripts]
fastproto = "fastproto_compiler.cli:main"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fastproto_compiler*"]

[tool.setuptools_scm]

[dependency-groups]
dev = [
    "black>=26.5.1",
]
