[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.12",
]
build-backend = "scikit_build_core.build"

[project]
name = "fastproto-example-bindings"
version = "0.1.0"
description = "Example Python bindings for the generated fastproto header"
requires-python = ">=3.9"

[tool.scikit-build]
wheel.packages = ["fastproto_example_bindings"]
